# chromadbx

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: release.yml  test.yaml
chromadbx/: __init__.py
chromadbx/core/: ids.py  queries.py  types.py
chromadbx/embeddings/: cloudflare.py  google.py  llamacpp.py  mistral.py  nomic.py  onnx.py  spacy.py  together.py
chromadbx/reranking/: __init__.py  cohere.py  together.py  utils.py
chromadbx/schema/: __init__.py
docs/: embeddings.md  index.md  reranking.md
embeddings/: index.html
experiments/: llama-cpp.ipynb  ort_ef.ipynb
reranking/: index.html
search/: search_index.json
test/: test_ids.py  test_query.py
test/embeddings/: test_cloudflare.py  test_google.py  test_llamacpp.py  test_mistral.py  test_nomic.py  test_onnx.py  test_spacy.py  test_together.py
test/reranking/: test_cohere.py  test_reranking_functions.py  test_together.py  test_utils.py
