[tool.poetry]
name = "chromadbx"
version = "0.0.1"
description = "A collection of experimental Chroma extensions."
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
readme = "README.md"

packages = [{ include = "chroma_dp" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/amikos-tech/chromadbx/issues"
"Homepage" = "https://chromadbx.chromadb.dev/"
"Source" = "https://github.com/amikos-tech/chromadbx/"


[tool.poetry.dependencies]
python = ">=3.8,<=4.0"
pydantic = "^2.7.2"
chromadb = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "24.3.0"
pre-commit = "^3.6.0"
hypothesis = "^6.103.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -q"
testpaths = [
    "tests",
    "integration",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true