[tool.poetry]
name = "chromadbx"
version = "0.0.5"
description = "A collection of experimental Chroma extensions."
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
readme = "README.md"

packages = [{ include = "chromadbx" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/amikos-tech/chromadbx/issues"
"Homepage" = "https://cookbook.chromadb.dev/"
"Source" = "https://github.com/amikos-tech/chromadbx/"


[tool.poetry.dependencies]
python = ">=3.9,<=4.0"
pydantic = "^2.7.2"
chromadb = { version = ">=0.4.0,<=0.6.0", optional = true }
ulid-py = { version = "^1.1.0", optional = true }
nanoid = { version = "^2.0.0", optional = true }
llama-embedder = { version = "^0.0.7", optional = true }

[tool.poetry.group.dev.dependencies]
chromadb = { version = ">=0.4.0,<=0.6.0" }
pytest = "^8.2.1"
black = "24.3.0"
pre-commit = "^3.6.0"
hypothesis = "^6.103.0"
ulid-py = { version = "^1.1.0" }
nanoid = { version = "^2.0.0" }
huggingface_hub = "^0.24.6"
llama-embedder = "^0.0.7"


[tool.poetry.extras]
ids = ["ulid-py", "nanoid"]
embeddings = ["llama-embedder", "onnxruntime"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -q"
testpaths = [
    "tests",
    "integration",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
